--- a/style/index.css
+++ b/style/index.css
@@ -66,6 +66,12 @@
     text-align: center;
 }
 
+.table {
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+
 
 
 
