--- a/style/index.css
+++ b/style/index.css
@@ -41,8 +41,6 @@
 }
 
 
-
-
 .animate.ng-enter {
     opacity:0;
     -webkit-transition: 0.5s linear all;
@@ -70,6 +68,10 @@
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
+}
+
+.panel-body {
+    padding-top:0;
 }
 
 
