--- a/template/login.html
+++ b/template/login.html
@@ -1,6 +1,6 @@
 <div class="container" style="margin-top:100px;">
     <div class="row">
-<div class="col-xs-6 col-xs-offset-3">
+<div class="col-md-6 col-md-offset-3">
     <div class="panel panel-login">
         <div class="panel-heading">
             <div class="row">
