--- a/template/register.html
+++ b/template/register.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col-lg-12" >
         <form ng-controller="form_register" class="register-form" name="register" role="form" >
-            <div class="text-center">
+            <div class="text-center alert alert-danger">
                 <p class="text-danger">{{registerError}}</p>
             </div>
             <div class="form-group">
