--- a/style/index.css
+++ b/style/index.css
@@ -75,5 +75,18 @@
 }
 
 
+td, th, tr {
+    white-space: normal; /* Only needed when it's set differntly somewhere else */
+    word-wrap: break-word;
+}
+
+.form-inline {
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    background:#fff;
+    padding:5px;
+}
+
 
 
