--- a/template/home.html
+++ b/template/home.html
@@ -5,34 +5,26 @@
     </div>
 
 
-    <div class="row bg-primary">
-        <div class="col-xs-6 col-xs-offset-3">
-            <nav class="navbar navbar-default">
-                <div class="container-fluid">
-                    <div class="navbar-form">
-                        <div class="form-inline">
-                            <form name="myForm">
-                                <div class="form-group">
-                                    <input type="text" name="taskTitle" ng-model="taskTitle" class="form-control" id="task_title" placeholder="Task Title" required/>
-                                </div>
-                                <div class="form-group" style="margin-right:10px;">
-                                    <input type="text" name="taskMessage" ng-model="taskMessage" class="form-control" id="task_comment" placeholder="Task Description" required/>
-                                </div>
-
-                                    <button type="submit" ng-click="todoAdd()" ng-disabled="myForm.taskTitle.$error.required || myForm.taskMessage.$error.required || myForm.$invalid" class="btn btn-primary pull-center" >Add Task</button>
-
-                            </form>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-xs-6 col-xs-offset-3">
+                <div class="form-inline" style="background:#fff; padding:5px;">
+                    <form name="myForm" >
+                        <div class="form-group">
+                            <input type="text" name="taskTitle" ng-model="taskTitle" class="form-control" id="task_title" placeholder="Task Title" maxlength="30" required/>
                         </div>
-
-                    </div>
-
-
+                        <div class="form-group" style="margin-right:10px;">
+                            <input type="text" name="taskMessage" ng-model="taskMessage" class="form-control" id="task_comment" placeholder="Task Description" maxlength="60" required/>
+                        </div>
+                        <button type="submit" ng-click="todoAdd()" ng-disabled="myForm.taskTitle.$error.required || myForm.taskMessage.$error.required || myForm.$invalid" class="btn btn-primary" >Add Task</button>
+                    </form>
                 </div>
-            </nav>
+            </div>
         </div>
-    </div>
 
-    <div class="row">
+
+
+    <div class="row" style="margin-top:15px;">
         <div class="col-xs-6 col-xs-offset-3">
             <div class="alert alert-success" fade-away="4000">
                 <button type="button" class="close" data-dismiss="alert">x</button>
@@ -46,26 +38,32 @@
         <p class="text-success">{{success}}</p>
     </div>
 
-        <div class="col-sm-8 col-xs-offset-2" style="background:#fff; color:black; padding:10px; top:40px; -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
-    border-radius: 7px;">
-        <table class="table text-center">
-            <thead class="text-center">
-            <tr>
-                <th>#TaskID</th>
-                <th>Task Title</th>
-                <th>Task Description</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="x in todoList[0]" class="animate">
-                <td>{{$index}}</td>
-                <td>{{x.task_message}}</td>
-                <td>{{x.task_title}}</td>
-                <td><button class="btn btn-warning" ng-click="remove($index)" title="remove"><span class="glyphicon glyphicon-trash"></span></button></td>
-            </tr>
-            </tbody>
-        </table>
 
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2" style=" color:black; padding:10px; top:40px; -webkit-border-radius: 7px;
+        -moz-border-radius: 7px;
+        border-radius: 7px;">
+                <table class="table table-striped text-center" style="background:#fff;">
+                    <thead class="text-center">
+                    <tr>
+                        <th>#TaskID</th>
+                        <th>Task Title</th>
+                        <th>Task Description</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="x in todoList[0]" class="table-row-edit-form animate">
+                        <td>{{$index}}</td>
+                        <td>{{x.task_message}}</td>
+                        <td>{{x.task_title}}</td>
+                        <td><button class="btn btn-warning" ng-click="remove($index)" title="remove"><span class="glyphicon glyphicon-trash"></span></button></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
+
+
 </div>
+
